--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "포켓마켓",
+  "name": "우리 주머니속 포켓마켓",
   "icons": [
     {
       "src": "favicon.ico",
